Change code to be compatible with java 8 -2